# anoman-codecheck

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
anoman_codecheck/: __main__.py  scanner.py
anoman_codecheck/checklists/: __init__.py  registry.py
anoman_codecheck/ci/: formatters.py
anoman_codecheck/cve/: lookup.py
src/: __init__.py  scanner.py
