[project]
name = "anoman-codecheck"
version = "0.1.0"
description = "AI-powered codebase security & quality scanner with OWASP/NIST/ISO checklists, live CVE lookup, and CI/CD integration"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Anoman AI", email = "hello@anoman.io" }]
keywords = ["security", "code-review", "ai", "scanner", "sast", "owasp", "cve", "llm", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["httpx>=0.27"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/c0denician88/anoman-codecheck"
Repository = "https://github.com/c0denician88/anoman-codecheck"

[project.scripts]
anoman-codecheck = "anoman_codecheck.scanner:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anoman_codecheck"]
